Update netlify.toml from part and remove domain netlify

--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,5 +1,5 @@
 [[redirects]]
-  from = "https://dvlinks.netlify.app/*"
+  from = "/*"
   to = "https://app.dvlinks.website/:splat"
   status = 301
   force = true
